# pathfinding-project-CPP

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  nginx.conf
.claude/: settings.local.json
PathFindingBackend/: CMakeLists.txt  PathFindingBackend.sln  UpgradeLog.htm
PathFindingBackend/PathFindingBackend/: BFS.cpp  BFS.h  Cell.cpp  Cell.h  Dijkstra.cpp  Dijkstra.h  DijkstraNode.h  Grid.cpp  Grid.h  PathFinder.cpp  PathFinder.h  PathFindingBackend.cpp  PathFindingBackend.vcxproj  PathFindingBackend.vcxproj.filters  Step.h  Vector2.h  aStar.cpp  aStar.h  aStarNode.h  httplib.h  main.cpp
PathFindingBackend/PathFindingBackend/x64/Debug/: PathFindingBackend.exe.recipe  vc143.idb
PathFindingBackend/PathFindingBackend/x64/Debug/PathFind.b66f0918.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  PathFindingBackend.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
frontend/: Index.html  script.js
frontend/test/: script.js
frontend/testGrid/: Index.html  api.js  config.js  constants.js  events.js  grid.js  maze.js  modes.js  renderer.js  script.js  state.js  style.css  ui.js
